@@ -3,10 +3,5 @@ lv2.java 에서 필수 과제 2를 작성, 그때 사용된 클래스 Calculator
 
 Q. 0을 포함한 양의 정수만을 입력값으로 받는 방법
 
-Q. Calculator 클래스에서 getResultsList, setResultsList, showResultsList, removeFirstResult 메서드에서 리턴값이 사용되지 않았다고 나옵니다. 문제가 있나요 ?
+Q. Calculator 클래스에서 setResultsList, removeFirstResult 메서드에서 리턴값이 사용되지 않았다고 나옵니다. getter 와 setter 
 
-Q. 필수 과제를 끝내놓고 5주차 학습하면서 Lambda 관련 학습을 하다가 JDK 를 22버전으로 업데이트 했는데, 그 이후 실행이 안됩니다. 
-
-오류 메시지 : java: invalid source release 21 with --enable-preview
-  (preview language features are only supported for release 22)
- 
